fix(.ts-fab-tab): author image spacing

--- a/web/app/themes/grillinfools-theme/assets/css/main.css
+++ b/web/app/themes/grillinfools-theme/assets/css/main.css
@@ -8255,6 +8255,7 @@ textarea.login #login #loginform input[type*="password"] {
 .single .hentry .ts-fab-wrapper .ts-fab-tab {
   border-radius: 3px;
   border-top-left-radius: 0;
+  padding-bottom: 2em;
 }
 .single .hentry .ts-fab-wrapper .ts-fab-tab .ts-fab-avatar {
   margin-bottom: 1em;
