--- a/web/app/themes/grillinfools-theme/assets/less/layouts/_posts.less
+++ b/web/app/themes/grillinfools-theme/assets/less/layouts/_posts.less
@@ -111,8 +111,12 @@
 			.ts-fab-tab {
 				border-radius: 3px;
 				border-top-left-radius: 0;
+				padding-bottom: 2em;
 				.ts-fab-avatar {
 					margin-bottom: 1em;
+					.avatar {
+					
+					}
 				}
 			}
 			img {
